deploy/workspace/kubernetes/keycloak/production/manifests/ingress/ingressroute-client.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client
  namespace: dtaas-workspace
spec:
  entryPoints:
    - web-secure
  routes:
    - match: Host(`intocps.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
      services:
        - name: client
          port: 4000
  tls: {}
