deploy/workspace/kubernetes/keycloak/production/manifests/ingress/ingressroute-forward-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forward-auth
  namespace: dtaas-workspace
spec:
  entryPoints:
    - web-secure
  routes:
    - match: Host(`intocps.org`) && PathPrefix(`/_oauth`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
  tls:
    certResolver: letsencrypt
