deploy/workspace/kubernetes/keycloak/production/manifests/ingress/ingressroute-keycloak.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: dtaas-workspace
spec:
  entryPoints:
    - web-secure
  routes:
    - match: Host(`YOUR_SERVER_DNS`) && PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
  tls:
    certResolver: letsencrypt
