deploy/workspace/kubernetes/keycloak/production/manifests/ingress/ingressroute-user1.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user1
  namespace: dtaas-workspace
spec:
  entryPoints:
    - web-secure
  routes:
    - match: Host(`intocps.org`) && PathPrefix(`/user1`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
      services:
        - name: user1
          port: 8888
  tls: {}
