deploy/workspace/kubernetes/keycloak/production/manifests/ingress/ingressroute-user2.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user2
  namespace: dtaas-workspace
spec:
  entryPoints:
    - web-secure
  routes:
    - match: Host(`YOUR_SERVER_DNS`) && PathPrefix(`/user2`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
      services:
        - name: user2
          port: 8888
  tls:
    certResolver: letsencrypt
